Submit cR ( Hu Puyun )'s homework

--- a/Homework3/2018202133HPY/Makefile
+++ b/Homework3/2018202133HPY/Makefile
@@ -7,7 +7,7 @@ spj :
 	gcc -O2 checker/spj.c -o checker/spj.out -lm
 
 clean :
-	rm -r double_calculator checker/spj.out tmp/*
+	$(RM) -r double_calculator checker/spj.out tmp/*
 
 test :
 	/bin/bash ./test.sh
