--- a/Homework9/2018202133HPY/Makefile
+++ b/Homework9/2018202133HPY/Makefile
@@ -1,2 +1,21 @@
-all:
-	clang -g src/*.c -o test
+SRC = ${wildcard src/*.c}
+OBJ_MAIN = ${patsubst src/%.c, tmp/%.o, $(SRC)}
+OBJ_NO_MAIN = ${patsubst src/%.c, tmp/no_main_%.o, $(SRC)}
+CFLAGS = -g -fPIC -Wall -Wextra -fno-strict-aliasing
+
+all : tmp test
+
+tmp : 
+	mkdir -p tmp
+
+$(OBJ_MAIN) : tmp/%.o : src/%.c
+	$(CC) $(CFLAGS) -c $^ -o $@
+
+
+test : $(OBJ_MAIN)
+	$(CC) $(CFLAGS) $^ -o $@
+
+clean :
+	$(RM) tmp/* test
+
+.PHONY : clean
