--- a/Homework9/2018202133HPY/Makefile
+++ b/Homework9/2018202133HPY/Makefile
@@ -2,6 +2,10 @@ SRC = ${wildcard src/*.c}
 OBJ_MAIN = ${patsubst src/%.c, tmp/%.o, $(SRC)}
 OBJ_NO_MAIN = ${patsubst src/%.c, tmp/no_main_%.o, $(SRC)}
 CFLAGS = -g -fPIC -Wall -Wextra -fno-strict-aliasing
+LDFLAGS = -Wl,--wrap,malloc -Wl,--wrap,free
+
+override CC=clang
+
 
 all : tmp test
 
@@ -13,7 +17,7 @@ $(OBJ_MAIN) : tmp/%.o : src/%.c
 
 
 test : $(OBJ_MAIN)
-	$(CC) $(CFLAGS) $^ -o $@
+	$(CC) $(LDFLAGS) $^ -o $@
 
 clean :
 	$(RM) tmp/* test
